# fastapi_crud_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
app/: crud.py  main.py  models.py
tests/: test_crud.py
