# === pyproject.toml ===
[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[project]
name = "fastapi-crud-app"
version = "0.1.0"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "pytest==8.1.1",
    "ruff==0.4.1"
]